Fixed CMakeLists.txt to fix OpenGL link problems.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 PROJECT(render3d)
-FIND_PACKAGE(Qt4 REQUIRED)
+FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
-SET(QT_USE_QTOPENGL TRUE)
 
 INCLUDE(${QT_USE_FILE})
 ADD_DEFINITIONS(${QT_DEFINITIONS})
@@ -23,4 +22,7 @@ ADD_EXECUTABLE(render3d ${render3d_SOURCES}
                         ${render3d_HEADERS_MOC}
               )
 
-TARGET_LINK_LIBRARIES(render3d ${QT_LIBRARIES})
+SET(LIBRARIES ${LIBRARIES} ${QT_LIBRARIES})
+SET(LIBRARIES ${LIBRARIES} ${OPENGL_LIBRARIES})
+
+TARGET_LINK_LIBRARIES(render3d ${LIBRARIES})
